syntax = "proto3";

package order.v1;

import "google/protobuf/timestamp.proto";

option go_package = "BikeStoreGolang/api-gateway/proto/order;orderpb";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
  rpc ListOrders (ListOrdersRequest) returns (stream OrderResponse);
  rpc CancelOrder (CancelOrderRequest) returns (OrderResponse);
  rpc ApproveOrder (ApproveOrderRequest) returns (OrderResponse);
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  double total = 3;
  string address = 4;
}

message OrderResponse {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total = 4;
  string address = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
}

message GetOrderRequest {
  string id = 1;
}

message ListOrdersRequest {
  string user_id = 1;
}

message CancelOrderRequest {
  string id = 1;
}

message ApproveOrderRequest {
  string id = 1;
}